# embedded-innodb

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
api/: api0api.cc
btr/: btr0btr.cc  btr0cur.cc
buf/: buf0buf.cc  buf0flu.cc  buf0lru.cc
dict/: dict0dict.cc  dict0mem.cc
fil/: fil0fil.cc
fsp/: fsp0fsp.cc
include/: buf0buf.h  buf0flu.h  dict0mem.h  dyn0dyn.h  ib0config.h  lock0lock.h  log0log.h  log0recv.h  mem0mem.h  pars0types.h  que0que.h  sync0sync.h  trx0trx.h  ut0lst.h  ut0mem.h
lock/: lock0lock.cc
log/: log0recv.cc
os/: os0aio.cc  os0sync.cc
pars/: pars0lex.l  pars0opt.cc
row/: row0upd.cc
srv/: srv0srv.cc
sync/: sync0rw.cc  sync0sync.cc
tests/: ib_recover.cc  ib_test1.cc
trx/: trx0trx.cc
unit-tests/: CMakeLists.txt  test_btree.cc
ut/: ut0mem.cc
